# nlp-workbook-v2

./: .gitignore  1-chapter.ipynb  Dockerfile  README.md  docker-compose.yml  pyproject.toml
