[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "spacy (>=3.8.7,<4.0.0) ; python_version == \"3.12\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
